<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.men.josu.myquizz.QuestionActivity"
    tools:showIn="@layout/activity_question">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:fillViewport="true"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/activity_vertical_margin"
            android:orientation="vertical"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/txt_questions"
                android:textSize="@dimen/edittext_textsize_login"
                android:textColor="@color/EditTextColorBlack"
                android:textStyle="bold"
                android:layout_gravity="center"
                />
            <TextView
                android:id="@+id/txtquestion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/txt_mensaje"
                android:textSize="@dimen/edittext_textsize_login"
                android:textColor="@color/EditTextColorBlack"
                android:layout_gravity="left"
                />
            <View
                android:id="@+id/ruler"
                android:layout_below="@+id/txtquestion"
                android:layout_width="match_parent"
                android:layout_marginTop="10dp"
                android:layout_height="1dp"
                android:background="@color/colorRule"/>
                <RadioGroup
                    android:id="@+id/group_answers"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/ruler"

                    >
                    <RadioButton
                        android:text="Respuesta"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/radioButton1"
                        android:layout_weight="1"
                        />
                    <RadioButton
                    android:text="Respuesta"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/radioButton2"
                    android:layout_weight="1"
                    />
                    <RadioButton
                        android:text="Respuesta"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/radioButton3"
                        android:layout_weight="1"
                        />
                    <RadioButton
                        android:text="Respuesta"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/radioButton4"
                        android:layout_weight="1"
                        />

                </RadioGroup>
            <Button
                android:id="@+id/btnchecks"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/btn_result"
                android:theme="@style/RissedButtonDark"
                />

        </LinearLayout>

    </ScrollView>
</android.support.design.widget.CoordinatorLayout>
